<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="single"
        android:id="@+id/g1">
        <item
            android:title="@string/bill_list"
            android:id="@+id/menu_list"
            android:icon="@drawable/ic_action_view_as_list"
            >
        </item>
        <item
            android:title="@string/add_pic"
            android:id="@+id/menu_add_pic"
            android:icon="@drawable/ic_action_new"
            >
        </item>
        <item
            android:title="@string/add_man"
            android:id="@+id/menu_add_man"
            android:icon="@drawable/ic_action_new"
            >
        </item>
        <item
            android:title="@string/charts"
            android:id="@+id/menu_charts"
            android:icon="@drawable/ic_action_about"
            >
        </item>
    </group>
    <group
        android:checkableBehavior="single"
        android:id="@+id/g2">
        <item
            android:title="@string/sync"
            android:id="@+id/menu_sync"
            android:icon="@drawable/ic_action_refresh"
            >
        </item>
    </group>
    <group
        android:checkableBehavior="single"
        android:id="@+id/g3">
        <item
            android:title="@string/logout"
            android:id="@+id/menu_logout"
            android:icon="@drawable/ic_action_cancel"
            >
        </item>
    </group>
</menu>