<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/defineProductMainLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_bills">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:paddingEnd="10dp"
        android:paddingStart="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:orientation="horizontal">

        <ImageButton
            android:id="@+id/showHelp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:background="@color/colorPrimaryDark"
            android:layout_marginEnd="10dp"
            app:srcCompat="@drawable/ic_show_help" />

        <EditText
            android:id="@+id/shopName"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:hint="@string/shop_name"
            android:layout_gravity="center_vertical"
            android:textColor="@color/backgroundWhite"
            android:textColorHint="@color/backgroundWhite"
            android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageButton
                android:id="@+id/addProduct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:background="@color/colorPrimaryDark"
                android:visibility="invisible"
                app:srcCompat="@drawable/ic_add_new_product_white" />

            <ImageButton
                android:id="@+id/acceptAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:background="@color/colorPrimaryDark"
                android:paddingEnd="15dp"
                android:paddingStart="15dp"
                app:srcCompat="@drawable/ic_accept_white" />

            <ImageButton
                android:id="@+id/takePhotoAgain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:background="@color/colorPrimaryDark"
                app:srcCompat="@drawable/ic_take_photo_white" />

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/optionButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/selectName"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="1"
            android:textSize="10sp"
            android:text="@string/option_name"
            android:backgroundTint="@color/option_button_green"/>

        <Button
            android:id="@+id/selectPrice"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="2"
            android:textSize="10sp"
            android:text="@string/option_total_price"
            android:backgroundTint="@color/option_button_blue"/>

        <Button
            android:id="@+id/selectUnitPrice"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="2"
            android:textSize="10sp"
            android:text="@string/option_unit_price"
            android:backgroundTint="@color/option_button_red"/>

        <Button
            android:id="@+id/selectAsNothing"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="2"
            android:textSize="10sp"
            android:text="@string/option_ignore"
            android:backgroundTint="@color/option_button_gray"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/productList"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="500dp" />


    </ScrollView>

</LinearLayout>